1. 优化sqlite的交互，修复插入时的错误 2. 优化采集器UI，支持搜索字符时自动跳转到对应位置并高亮 3. tab页面的title与任务名字同步 4. 将网页采集器,xpath,json,python转换器的工作模式统一为一种 5. 强化采集逻辑，能支持采集InnerText,OuterHtml等 6. 清洗支持模块和任务复制，网页采集器支持xpath复制 7. 数据清洗支持自动刷新 8. 【重大更新】网页采集器one模式支持【手气不错】，搜索字符添加一个关键字，即可检索出和其模式相似的属性

--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -97,6 +97,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="SubTaskView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SystemStateViewer.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -129,6 +133,9 @@
     </Compile>
     <Compile Include="SmartETLUI.xaml.cs">
       <DependentUpon>SmartETLUI.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SubTaskView.xaml.cs">
+      <DependentUpon>SubTaskView.xaml</DependentUpon>
     </Compile>
     <Compile Include="SystemStateViewer.xaml.cs">
       <DependentUpon>SystemStateViewer.xaml</DependentUpon>
