--- a/Hawk.Core/Hawk.Core.csproj
+++ b/Hawk.Core/Hawk.Core.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Utils\MVVM\ListScroll.cs" />
     <Compile Include="Utils\MVVM\ListSelector.cs" />
     <Compile Include="Utils\MVVM\WPFOperate.cs" />
+    <Compile Include="Utils\Permutation.cs" />
     <Compile Include="Utils\Plugins\XPropertyGrid.cs" />
     <Compile Include="Utils\SafeObservable.cs" />
     <Compile Include="Connectors\SQLServerConnector.cs" />
