--- a/Hawk.ETL/packages.config
+++ b/Hawk.ETL/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
 </packages>
