--- a/Hawk.ETL/Hawk.ETL.csproj
+++ b/Hawk.ETL/Hawk.ETL.csproj
@@ -103,6 +103,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Includes\System.Windows.Controls.WpfPropertyGrid.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
