--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -177,6 +177,10 @@
   <ItemGroup>
     <Folder Include="Themes\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\微信公众平台.jpg" />
+    <Resource Include="Images\支付宝捐赠.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
