--- a/Hawk.Core/Hawk.Core.csproj
+++ b/Hawk.Core/Hawk.Core.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Utils\Permutation.cs" />
     <Compile Include="Utils\Plugins\LayoutManager.cs" />
     <Compile Include="Utils\Plugins\XPropertyGrid.cs" />
+    <Compile Include="Utils\RequestManager.cs" />
     <Compile Include="Utils\SafeObservable.cs" />
     <Compile Include="Connectors\SQLServerConnector.cs" />
     <Compile Include="Connectors\Vitural\AsyncVirtualizingCollection.cs" />
