--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="Title" value="Hawk-数据抓取工具" />
-    <add key="Splash" value="splash.jpg" />
-    <add key="Icon" value="Hawk.ico" />
-    <add key="MainPluginLocation" value="\" />
-    <add key="PluginLocationRelative" value="true" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="Title" value="Hawk-数据抓取工具"/>
+    <add key="Splash" value="splash.jpg"/>
+    <add key="Icon" value="Hawk.ico"/>
+    <add key="MainPluginLocation" value="\"/>
+    <add key="PluginLocationRelative" value="true"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
 
   </startup>
   <runtime>
