add multiple features as update.md

--- a/Hawk.ETL/Hawk.ETL.csproj
+++ b/Hawk.ETL/Hawk.ETL.csproj
@@ -104,10 +104,6 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Windows.Controls.WpfPropertyGrid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Includes\System.Windows.Controls.WpfPropertyGrid.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -128,7 +124,7 @@
     <Compile Include="Crawlers\FeelLuckyModel.cs" />
     <Compile Include="Crawlers\JavaScriptAnalyzer.cs" />
     <Compile Include="Crawlers\NetworkManager.cs" />
-    <Compile Include="Crawlers\ProxyProvider.cs" />
+    <Compile Include="Plugins\Generators\ProxyGE.cs" />
     <Compile Include="Crawlers\XPath.cs" />
     <Compile Include="Crawlers\XPathAnalyzer.cs" />
     <Compile Include="Crawlers\XPathTF.cs" />
@@ -205,6 +201,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\WPFPropertyGrid\System.Windows.Controls.WPFPropertyGrid\System.Windows.Controls.WPFPropertyGrid.csproj">
+      <Project>{384bd3e5-bcc4-4582-9cdc-c927e5e8297b}</Project>
+      <Name>System.Windows.Controls.WPFPropertyGrid</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hawk.Core\Hawk.Core.csproj">
       <Project>{B5CCA117-8D77-418B-8B18-D3E64682DD83}</Project>
       <Name>Hawk.Core</Name>
