--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -40,10 +40,6 @@
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Controls.WpfPropertyGrid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Includes\System.Windows.Controls.WpfPropertyGrid.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -183,6 +179,10 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\WPFPropertyGrid\System.Windows.Controls.WPFPropertyGrid\System.Windows.Controls.WPFPropertyGrid.csproj">
+      <Project>{384bd3e5-bcc4-4582-9cdc-c927e5e8297b}</Project>
+      <Name>System.Windows.Controls.WPFPropertyGrid</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hawk.Core\Hawk.Core.csproj">
       <Project>{B5CCA117-8D77-418B-8B18-D3E64682DD83}</Project>
       <Name>Hawk.Core</Name>
