--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net46" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
