support auto save running tasks

--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -3,6 +3,7 @@
   <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net46" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net46" />
+  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net46" developmentDependency="true" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
   <package id="ToastNotifications" version="2.3.4" targetFramework="net46" />
   <package id="ToastNotifications.Messages" version="2.3.4" targetFramework="net46" />
