--- a/HawkUnitTest/HawkUnitTest.csproj
+++ b/HawkUnitTest/HawkUnitTest.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataManagerTest.cs" />
+    <Compile Include="ETLTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XPathAnalyzerTest.cs" />
   </ItemGroup>
