--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\TextToFlowDocumentConverter.cs" />
     <Compile Include="XPathDetector.xaml.cs">
       <DependentUpon>XPathDetector.xaml</DependentUpon>
     </Compile>
