--- a/Hawk.ETL/packages.config
+++ b/Hawk.ETL/packages.config
@@ -6,4 +6,5 @@
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
+  <package id="YamlDotNet" version="5.2.0" targetFramework="net46" />
 </packages>
