--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -4,6 +4,8 @@
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net46" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net46" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
   <package id="ToastNotifications" version="2.3.4" targetFramework="net46" />
   <package id="ToastNotifications.Messages" version="2.3.4" targetFramework="net46" />
