--- a/HawkUnitTest/HawkUnitTest.csproj
+++ b/HawkUnitTest/HawkUnitTest.csproj
@@ -48,6 +48,10 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\Hawk.Core\packages\MSTest.TestFramework.1.1.11\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Octokit, Version=0.32.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Hawk.Core\packages\Octokit.0.32.0\lib\netstandard1.1\Octokit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
@@ -55,6 +59,7 @@
   <ItemGroup>
     <Compile Include="DataManagerTest.cs" />
     <Compile Include="ETLTest.cs" />
+    <Compile Include="GitHubAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XPathAnalyzerTest.cs" />
   </ItemGroup>
