--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters\TextToFlowDocumentConverter.cs" />
+    <Compile Include="DataViewers\FlowDocumentViewer.cs" />
     <Compile Include="XPathDetector.xaml.cs">
       <DependentUpon>XPathDetector.xaml</DependentUpon>
     </Compile>
