--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -9,4 +9,5 @@
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
   <package id="ToastNotifications" version="2.3.4" targetFramework="net46" />
   <package id="ToastNotifications.Messages" version="2.3.4" targetFramework="net46" />
+  <package id="HockeySDK.WPF" version="4.1.6" targetFramework="net45" />
 </packages>
