--- a/Hawk.ETL/packages.config
+++ b/Hawk.ETL/packages.config
@@ -8,4 +8,5 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="Octokit" version="0.32.0" targetFramework="net46" />
   <package id="YamlDotNet" version="5.2.0" targetFramework="net46" />
+  <package id="HockeySDK.WPF" version="4.1.6" targetFramework="net45" />
 </packages>
