--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -10,4 +10,5 @@
   <package id="ToastNotifications" version="2.3.4" targetFramework="net46" />
   <package id="ToastNotifications.Messages" version="2.3.4" targetFramework="net46" />
   <package id="HockeySDK.WPF" version="4.1.6" targetFramework="net45" />
+  <package id="HockeySDK.Core" version="4.1.6" targetFramework="net45" />
 </packages>
