--- a/HawkScheduler/HawkScheduler.csproj
+++ b/HawkScheduler/HawkScheduler.csproj
@@ -37,6 +37,10 @@
     <Reference Include="CommandLine">
       <HintPath>..\Includes\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.8.7.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Hawk.Core\packages\HtmlAgilityPack.1.8.7\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Includes\log4net.dll</HintPath>
