the final commit for hawk5

--- a/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
+++ b/Hawk.ETL.Controls/Hawk.ETL.Controls.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\AutoSaveWindow.cs" />
+    <Compile Include="Controls\ETLTempTaskWindow.cs" />
     <Compile Include="Controls\PopupWindowBase.cs" />
     <Compile Include="DataViewers\FlowDocumentViewer.cs" />
     <Compile Include="Themes\MetroConverter.cs" />
