--- a/HawkScheduler/HawkScheduler.csproj
+++ b/HawkScheduler/HawkScheduler.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
