--- a/Hawk/App.config
+++ b/Hawk/App.config
@@ -1,27 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="Title" value="Hawk"/>
-    <add key="Splash" value="splash.jpg"/>
-    <add key="Icon" value="Hawk.ico"/>
-    <add key="MainPluginLocation" value="\"/>
-    <add key="PluginLocationRelative" value="true"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="Title" value="Hawk" />
+    <add key="Splash" value="splash.jpg" />
+    <add key="Icon" value="Hawk.ico" />
+    <add key="MainPluginLocation" value="\" />
+    <add key="PluginLocationRelative" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
 
   </startup>
   <runtime>
-    <loadFromRemoteSources enabled="true"/>
+    <loadFromRemoteSources enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.8.7.0" newVersion="1.8.7.0"/>
+        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.11.12.0" newVersion="1.11.12.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="ToastNotifications" publicKeyToken="e89d9d7314a7c797" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.3.4.0" newVersion="2.3.4.0"/>
+        <assemblyIdentity name="ToastNotifications" publicKeyToken="e89d9d7314a7c797" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.4.0" newVersion="2.3.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.7.0.0" newVersion="4.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.246" newVersion="1.2.0.246" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Win32.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
