--- a/Hawk/packages.config
+++ b/Hawk/packages.config
@@ -1,14 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net46" />
-  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
-  <package id="HockeySDK.Core" version="4.1.6" targetFramework="net45" />
-  <package id="HockeySDK.WPF" version="4.1.6" targetFramework="net45" />
-  <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net46" />
+  <package id="Autoupdater.NET.Official" version="1.5.6" targetFramework="net46" />
+  <package id="FSharp.Core" version="4.7.0" targetFramework="net46" />
+  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net46" />
+  <package id="Microsoft.AppCenter" version="2.3.0-preview" targetFramework="net46" />
+  <package id="Microsoft.AppCenter.Analytics" version="2.3.0-preview" targetFramework="net46" />
+  <package id="Microsoft.AppCenter.Crashes" version="2.3.0-preview" targetFramework="net46" />
+  <package id="Microsoft.Net.Compilers" version="3.2.1" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net46" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net46" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net46" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net46" developmentDependency="true" />
+  <package id="NETStandard.Library" version="1.6.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net46" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net45" />
-  <package id="ToastNotifications" version="2.3.4" targetFramework="net46" />
-  <package id="ToastNotifications.Messages" version="2.3.4" targetFramework="net46" />
+  <package id="sqlite-net-pcl" version="1.3.1" targetFramework="net46" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.2" targetFramework="net46" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.2" targetFramework="net46" />
+  <package id="System.AppContext" version="4.1.0" targetFramework="net46" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net46" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net46" />
+  <package id="System.Console" version="4.0.0" targetFramework="net46" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net46" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net46" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net46" />
+  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net46" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net46" />
+  <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="net46" />
+  <package id="System.IO" version="4.1.0" targetFramework="net46" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="net46" />
+  <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="net46" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net46" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net46" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net46" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net46" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net46" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="net46" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="net46" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net46" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net46" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net46" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net46" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net46" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net46" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net46" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net46" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net46" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net46" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="net46" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net46" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net46" />
+  <package id="ToastNotifications" version="2.5.1" targetFramework="net46" />
+  <package id="ToastNotifications.Messages" version="2.5.1" targetFramework="net46" />
 </packages>
